# python-pipeline

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
app/: app.py
scripts/: acceptance.sh  lint.sh  publish.sh  test.sh  typecheck.sh
tests/acceptance/: conftest.py  test_health_check.py
tests/acceptance/features/: health_check.feature
